--- a/about_me.html
+++ b/about_me.html
@@ -5,31 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-.box > a:link {
-  color : white;
-  
-}
-.box > a:visited {
-  color : white;
-
-}
-.box > a:hover {
-  color : white;
-
-}
-.box > a:active {
-  color : white;
-
-}
-.box {
-    background-color: skyblue;
-    text-align: center;
-    font-size: 150%;
-        
-}
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="box">   
