--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-        function dosomething()
+        function dosomething(){
             let num1 = Document.getElementById('inputA').value;
             let num2 = document.getElementById('inputB').value;
 
             document.getElementById('valueA').innerHTML = num1;
-            document.getElementById('valueB').innerHTML = num2;
+              document.getElementById('valueB').innerHTML = num2;
 
             document.getElementById('valueC').innerHTML = Number(num1) + Number(num2);
+    }
+
+        function WhatTimeIsIt(){
+            alert(new Date())
+        }
     </script>
 </head>
 <body>
@@ -27,6 +32,7 @@
     <h3>세번쨰 크기 헤드라인</h3>
     <h4>세번쨰 크기 헤드라인</h4>
     <h5>세번쨰 크기 헤드라인</h5>
+    <button onclick="WhatTimeIsIt()">현재 시간</button>
 
     <label for="inputA">첫번쨰 입력값</label>
     <input type="inputA" value="10" onkeyup="dosomething()">
