--- a/index.html
+++ b/index.html
@@ -4,35 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script type="text/javascript">
-        function dosomething(){
-            let num1 = Document.getElementById('inputA').value;
-            let num2 = document.getElementById('inputB').value;
+    <title>Index</title>
+    <link rel="stylesheet" href="bootstrap4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="WhatTimeIsIt.js"></script>
+    <script src="DoSomeThing.js"></script>
 
-            document.getElementById('valueA').innerHTML = num1;
-              document.getElementById('valueB').innerHTML = num2;
-
-            document.getElementById('valueC').innerHTML = Number(num1) + Number(num2);
-    }
-
-        function WhatTimeIsIt(){
-            alert(new Date())
-        }
-    </script>
-</head>
+   </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="blog_list.html">Blog</a>
-        <a href="about_me.html">About me</a>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Django</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog_list.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about_me.html">About me</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Home</a>
+                <a class="dropdown-item" href="#">Bl</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <h1>촛번쨰 크기 헤드라인</h1>
     <h2>두번쨰 크기 헤드라인</h2>
     <h3>세번쨰 크기 헤드라인</h3>
     <h4>세번쨰 크기 헤드라인</h4>
     <h5>세번쨰 크기 헤드라인</h5>
-    <button onclick="WhatTimeIsIt()">현재 시간</button>
+    <button onclick="WhatTimeIsIt()">현재 시간</button><br>
 
     <label for="inputA">첫번쨰 입력값</label>
     <input type="inputA" value="10" onkeyup="dosomething()">
@@ -50,5 +65,8 @@
 
 
     <img src="C:\github\django\source\notebook.jpg" width="700">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
 </body>
 </html>
