--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="bootstrap4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="WhatTimeIsIt.js"></script>
-    <script src="DoSomeThing.js"></script>
+    <link rel="stylesheet" href="bootstrap4/style.css">
+    <script src="function\WhatTimeIsIt.js"></script>
+    <script src="function\DoSomeThing.js"></script>
 
    </head>
 <body>
