--- a/about_me.html
+++ b/about_me.html
@@ -41,12 +41,36 @@
 
 <h1>about me</h1>
 
-<h3>한양공고 컴넷과에 재학중입니다 
-</h3>                                  
 
-html,css,django,python 등을 다룰 수 있습니다.
-<br><br>
-<a href="">첫화면 가기</a><br>
-<img src="source/coding.jpg" width="700">
+<div class="container">
+    <div class="row"><div class="col-9">
+        <h3>한양공고 컴넷과에 재학중입니다 
+        </h3>                                  
+        html,css,django,python 등을 다룰 수 있습니다.
+        <br><br>
+        <a href="">첫화면 가기</a>        
+    </div>
+
+   <div class="col-3">
+    <img src="source/coding.jpg" class="img-fluid">
+    </div>
+
+    </div>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm bg-info">
+            One of three columns
+          </div>
+          <div class="col-sm bg-secondary">
+            One of three columns
+          </div>
+          <div class="col-sm bg-warning">
+            One of three columns
+          </div>
+        </div>
+      </div>
+
+
+</div>
 </body>
 </html>
