--- a/blog_list.html
+++ b/blog_list.html
@@ -2,72 +2,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap4/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="bootstrap4/css/bootstrap.min.css">
 
-    <title>Document</title>
-        </head>
+  <title>Document</title>
+</head>
 
 
-        <body>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light container">
-            <a class="navbar-brand" href="index.html">Django</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="blog_list.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about_me.html">About me</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
-                  </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Home</a>
-                    <a class="dropdown-item" href="#">Bl</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li>
-              </ul>
-              <ul class="navbar-nav ml-auto">
-                <li class="nav=item">
-                  <a href="#" class="nav-link">log in</a>
-                </li>
-    
-              </ul>
-            </div>
-          </nav>  
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light container">
+  <a class="navbar-brand" href="index.html">Django</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="blog_list.html">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about_me.html">About me</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Home</a>
+          <a class="dropdown-item" href="#">Bl</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav=item">
+        <a href="#" class="nav-link">log in</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
   <div class="row my-3">
-    <div class="col-md-9">
-      <h1>Blog</h1>
+      <div class="col-md-9">
+          <h1>Blog</h1>
+          <div class="card mb-4">
+              <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+              <div class="card-body">
+                  <div class="small text-muted">January 1, 2022</div>
+                  <h2 class="card-title h4">Post Title</h2>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                  <a class="btn btn-primary" href="#!">Read more →</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card mb-4">
+          <div class="card-header">Search</div>
+          <div class="card-body">
+              <div class="input-group">
+                  <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                  <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+              </div>
+          </div>
+      </div>  
       <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                                <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
-                                </div>
-                            </div>
-                        </div>
+        <div class="card-header">Categories</div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-sm-6">
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#!">Web Design</a></li>
+                        <li><a href="#!">HTML</a></li>
+                        <li><a href="#!">Freebies</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#!">JavaScript</a></li>
+                        <li><a href="#!">CSS</a></li>
+                        <li><a href="#!">Tutorials</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-      <h3>Search</h3>
-      <h3>Category</h3>
-    </div>
+      </div>
   </div>
 </div>
 </body>
-</html>4
+</html>
